--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
     "lottie-react": "^2.4.1",
-    "next": "9.3.5",
+    "next": "^15.3.1",
     "next-seo": "^4.4.0",
     "react": "18",
     "react-awesome-reveal": "^4.3.1",
